--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@next/swc-darwin-arm64": "^15.1.7"
+  }
 }
